--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -1,12 +1,6 @@
 app = "supply-chain-system-api"
 primary_region = "syd"
 
-[build]
-  dockerfile = "Dockerfile"
-
-[deploy]
-  strategy = "rolling"
-
 [env]
   NODE_ENV = "production"
   PORT = "3001"
@@ -27,6 +21,9 @@ primary_region = "syd"
     method = "get"
     path = "/health"
     protocol = "http"
+
+[processes]
+  app = "node dist/main"
 
 [experimental]
   auto_rollback = true
