--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -111,26 +111,31 @@ jobs:
           tar -xzf web-artifact.tar.gz -C deploy-web
           ls -la deploy-web
 
+      - name: Install Vercel CLI
+        run: npm install -g vercel
+
       - name: Deploy to Vercel
         id: deploy
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./deploy-web
-          vercel-args: "--prebuilt ${{ inputs.environment == 'production' && '--prod' || '' }}"
-          alias-domains: |
-            ${{ inputs.environment == 'production' && format('{0}', secrets.VERCEL_PRODUCTION_DOMAIN) || format('{0}', secrets.VERCEL_STAGING_DOMAIN) }}
-        env:
-          NEXT_PUBLIC_API_URL: ${{ inputs.environment == 'production' && 'https://supply-chain-system-api.fly.dev' || 'https://staging-supply-chain-system-api.fly.dev' }}
+        run: |
+          cd deploy-web
+
+          # Set environment-specific variables
+          VERCEL_ARGS="--token ${{ secrets.VERCEL_TOKEN }} --cwd . --prebuilt --yes"
+          VERCEL_ARGS="$VERCEL_ARGS --scope ${{ secrets.VERCEL_ORG_ID }} --project ${{ secrets.VERCEL_PROJECT_ID }}"
+
+          if [ "${{ inputs.environment }}" == "production" ]; then
+            VERCEL_ARGS="$VERCEL_ARGS --prod"
+            DEPLOYMENT_URL=$(vercel $VERCEL_ARGS --env NEXT_PUBLIC_API_URL=https://supply-chain-system-api.fly.dev | grep -o 'https://.*')
+          else
+            DEPLOYMENT_URL=$(vercel $VERCEL_ARGS --env NEXT_PUBLIC_API_URL=https://staging-supply-chain-system-api.fly.dev | grep -o 'https://.*')
+          fi
+
+          echo "deployment-url=$DEPLOYMENT_URL" >> $GITHUB_OUTPUT
+          echo "Deployed to: $DEPLOYMENT_URL"
 
       - name: Verify Deployment
         run: |
-          DEPLOYMENT_URL="${{ steps.deploy.outputs.preview-url }}"
-          if [ "${{ inputs.environment }}" == "production" ]; then
-            DEPLOYMENT_URL="${{ steps.deploy.outputs.production-url }}"
-          fi
+          DEPLOYMENT_URL="${{ steps.deploy.outputs.deployment-url }}"
 
           echo "Verifying deployment at URL: $DEPLOYMENT_URL"
 
