--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -120,7 +120,7 @@ jobs:
           cd deploy-web
 
           # Set environment-specific variables
-          VERCEL_ARGS="--token ${{ secrets.VERCEL_TOKEN }} --cwd . --prebuilt --yes"
+          VERCEL_ARGS="--token ${{ secrets.VERCEL_TOKEN }} --cwd . --yes"
           VERCEL_ARGS="$VERCEL_ARGS --scope ${{ secrets.VERCEL_ORG_ID }}"
 
           # Create a simple vercel.json file for project linking
