--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -162,7 +162,26 @@ jobs:
           echo "Contents of app directory:"
           ls -la "$APP_DIR"
 
-          cd "$APP_DIR"
+          # Create the expected directory structure for Vercel
+          # The error message indicates Vercel is looking for: ~/work/SupplyChainSystem/SupplyChainSystem/deploy-web/apps/web
+          mkdir -p deploy-web/apps/web
+
+          # Copy all files from the detected app directory to the expected path
+          if [ "$APP_DIR" != "deploy-web/apps/web" ]; then
+            echo "Copying files from $APP_DIR to deploy-web/apps/web"
+            cp -r "$APP_DIR"/* deploy-web/apps/web/
+            cp -r "$APP_DIR"/.* deploy-web/apps/web/ 2>/dev/null || true
+            
+            # Change to the expected directory
+            cd deploy-web/apps/web
+          else
+            # Already in the correct directory
+            cd "$APP_DIR"
+          fi
+
+          echo "Current directory: $(pwd)"
+          echo "Contents of current directory:"
+          ls -la
 
           # Set environment-specific variables
           VERCEL_ARGS="--token ${{ secrets.VERCEL_TOKEN }} --yes"
