update vercel deployment

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -39,6 +39,88 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Check monorepo structure
+        run: |
+          echo "Checking monorepo structure..."
+
+          # Check if apps/web directory exists
+          if [ -d "apps/web" ]; then
+            echo "✅ Found apps/web directory"
+          else
+            echo "❌ apps/web directory not found"
+            echo "Directory structure:"
+            find . -type d -maxdepth 2 | sort
+            exit 1
+          fi
+
+          # Check if apps/web/package.json exists
+          if [ -f "apps/web/package.json" ]; then
+            echo "✅ Found apps/web/package.json"
+          else
+            echo "❌ apps/web/package.json not found"
+            exit 1
+          fi
+
+          # Check if apps/web/next.config.js exists
+          if [ -f "apps/web/next.config.js" ]; then
+            echo "✅ Found apps/web/next.config.js"
+          else
+            echo "❌ apps/web/next.config.js not found"
+            exit 1
+          fi
+
+          echo "Monorepo structure looks good!"
+
+      - name: Remove Husky prepare script
+        run: |
+          if [ -f "package.json" ]; then
+            # Check if the prepare script exists and contains husky
+            if grep -q "\"prepare\".*husky" package.json; then
+              echo "Removing husky prepare script from package.json"
+              # Use jq to remove the prepare script
+              jq 'del(.scripts.prepare)' package.json > package.json.tmp
+              mv package.json.tmp package.json
+            else
+              echo "No husky prepare script found in package.json"
+            fi
+          else
+            echo "package.json not found"
+          fi
+
+      - name: Install dependencies
+        run: npm ci || npm install
+
+      - name: Build application
+        run: |
+          echo "Building Next.js application..."
+          cd apps/web
+          npm ci || npm install
+          npm run build
+
+          # Check if .next directory was created
+          if [ -d ".next" ]; then
+            echo "✅ Next.js build successful, .next directory created"
+            echo "Contents of .next directory:"
+            ls -la .next
+            
+            # Check for routes-manifest.json
+            if [ -f ".next/routes-manifest.json" ]; then
+              echo "✅ Found routes-manifest.json"
+            else
+              echo "❌ routes-manifest.json not found"
+              exit 1
+            fi
+          else
+            echo "❌ Next.js build failed, .next directory not created"
+            exit 1
+          fi
+
       - name: Install Vercel CLI
         run: npm install -g vercel
 
