--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm run build",
+  "buildCommand": "cd apps/web && npm install && npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "outputDirectory": "apps/web/.next",
+  "rewrites": [{ "source": "/(.*)", "destination": "/apps/web/$1" }]
 }
