--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd ../.. && npm run build --filter=@supply-chain-system/web",
-  "outputDirectory": ".next",
   "framework": "nextjs",
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": ".next",
   "regions": ["iad1"],
   "git": {
     "deploymentEnabled": {
