update vercel deploy

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -69,76 +69,30 @@ jobs:
             exit 1
           fi
 
+          # Check if .npmrc files exist
+          if [ -f ".npmrc" ] && [ -f "apps/web/.npmrc" ]; then
+            echo "✅ Found .npmrc files"
+          else
+            echo "Creating .npmrc files to disable scripts..."
+            echo "ignore-scripts=true" > .npmrc
+            echo "ignore-scripts=true" > apps/web/.npmrc
+          fi
+
+          # Check if vercel.json files exist
+          if [ -f "vercel.json" ] && [ -f "apps/web/vercel.json" ]; then
+            echo "✅ Found vercel.json files"
+          else
+            echo "❌ vercel.json files not found"
+            exit 1
+          fi
+
           echo "Monorepo structure looks good!"
 
-      - name: Prepare web app for standalone deployment
-        run: |
-          echo "Preparing web app for standalone deployment..."
+      # Note: We're skipping the "Prepare web app for standalone deployment" step
+      # since Vercel will handle this with our vercel.json configuration
 
-          # Copy shared packages to web app's node_modules
-          mkdir -p apps/web/node_modules/@supply-chain-system
-
-          # Copy shared package
-          if [ -d "packages/shared" ]; then
-            echo "Copying shared package..."
-            cp -r packages/shared apps/web/node_modules/@supply-chain-system/
-            # Build the shared package
-            cd packages/shared
-            npm install
-            npm run build
-            cd ../..
-          fi
-
-          # Copy UI package
-          if [ -d "packages/ui" ]; then
-            echo "Copying UI package..."
-            cp -r packages/ui apps/web/node_modules/@supply-chain-system/
-            # Build the UI package
-            cd packages/ui
-            npm install
-            npm run build
-            cd ../..
-          fi
-
-          # Copy database package if needed
-          if [ -d "packages/database" ]; then
-            echo "Copying database package..."
-            cp -r packages/database apps/web/node_modules/@supply-chain-system/
-            # Build the database package
-            cd packages/database
-            npm install
-            npm run build
-            cd ../..
-          fi
-
-          echo "Web app prepared for standalone deployment!"
-
-      - name: Remove Husky prepare script
-        run: |
-          if [ -f "package.json" ]; then
-            # Check if the prepare script exists and contains husky
-            if grep -q "\"prepare\".*husky" package.json; then
-              echo "Removing husky prepare script from package.json"
-              # Use jq to remove the prepare script
-              jq 'del(.scripts.prepare)' package.json > package.json.tmp
-              mv package.json.tmp package.json
-            else
-              echo "No husky prepare script found in package.json"
-            fi
-          else
-            echo "package.json not found"
-          fi
-
-          # Also check and remove from web app's package.json
-          if [ -f "apps/web/package.json" ]; then
-            if grep -q "\"prepare\".*husky" apps/web/package.json; then
-              echo "Removing husky prepare script from apps/web/package.json"
-              cd apps/web
-              jq 'del(.scripts.prepare)' package.json > package.json.tmp
-              mv package.json.tmp package.json
-              cd ../..
-            fi
-          fi
+      # Note: We're skipping the "Remove Husky prepare script" step
+      # since we now handle this in vercel.json and .npmrc files
 
       - name: Install Vercel CLI
         run: npm install -g vercel
@@ -146,9 +100,6 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         run: |
-          # Change to web app directory
-          cd apps/web
-
           # Set environment-specific variables
           VERCEL_ARGS="--token ${{ secrets.VERCEL_TOKEN }} --yes"
 
