--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "cd apps/web && npm install && npm run build",
+  "buildCommand": "jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && cd apps/web && jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && npm install && npm run build",
   "devCommand": "npm run dev",
-  "installCommand": "cd apps/web && npm install",
+  "installCommand": "jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && cd apps/web && jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && npm install",
   "outputDirectory": "apps/web/.next",
   "rewrites": [{ "source": "/(.*)", "destination": "/apps/web/$1" }],
   "ignoreCommand": "git diff --quiet HEAD^ HEAD ./apps/web/"
