--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && npm install && npm run build",
-  "installCommand": "jq 'del(.scripts.prepare)' package.json > package.json.tmp && mv package.json.tmp package.json && npm install",
+  "buildCommand": "node -e \"const fs=require('fs');const p=JSON.parse(fs.readFileSync('package.json'));if(p.scripts && p.scripts.prepare){delete p.scripts.prepare;fs.writeFileSync('package.json',JSON.stringify(p,null,2));}\" && npm install && npm run build",
+  "installCommand": "node -e \"const fs=require('fs');const p=JSON.parse(fs.readFileSync('package.json'));if(p.scripts && p.scripts.prepare){delete p.scripts.prepare;fs.writeFileSync('package.json',JSON.stringify(p,null,2));}\" && npm install",
   "outputDirectory": ".next",
   "regions": ["iad1"],
   "git": {
